# prometheus-hass-sun2k

./: .gitignore  CHANGELOG.md  LICENSE  README.md  collector_hass_api.py  pyproject.toml  settings.py
resources/: config-example.yaml
resources/systemd/: prometheus-hass-sun2k.service
src/prometheus_hass_sun2k/: __init__.py  cli.py  collector.py  config.py
src/prometheus_hass_sun2k/resources/: config-example.yaml
src/prometheus_hass_sun2k/resources/systemd/: prometheus-hass-sun2k.service
